Time managment with moment.js
Time managment to control total time of the car inside the parking, views, styles and controllers added.

--- a/server/client/stylus/prepros.config
+++ b/server/client/stylus/prepros.config
@@ -897,6 +897,12 @@
     },
     "files": [
       {
+        "file": "base/components/details-car.styl",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "base/components/events.styl",
         "config": {
           "autoCompile": false
@@ -911,8 +917,8 @@
       {
         "file": "global.styl",
         "config": {
-          "sourceMap": true,
-          "customOutput": "/home/atencio/Documentos/Desarrollo_v3/Parking/server/client/public/css/global.css"
+          "customOutput": "/home/atencio/Documentos/Desarrollo_v3/Parking/server/client/public/css/global.css",
+          "sourceMap": true
         }
       }
     ]
