--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
     "mongoose": "^5.9.23",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
