Signin and Signup added
Signin and Signup added based on tokens

Cost total for a vehicle inside the parking added

Limit of vehicles added

--- a/server/client/stylus/prepros.config
+++ b/server/client/stylus/prepros.config
@@ -915,6 +915,12 @@
         }
       },
       {
+        "file": "base/components/messagesAndErrors.styl",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "global.styl",
         "config": {
           "customOutput": "/home/atencio/Documentos/Desarrollo_v3/Parking/server/client/public/css/global.css",
